--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1 class="title">Rock, Paper, Scissors</h1>
+    <button class="rock-btn">Rock</button>
+    <button class="paper-btn">Paper</button>
+    <button class="scissors-btn">Scissors</button>
+    
     <script src="script.js"></script>
 </body>
 </html>
