Refactor game structure and styles for improved UI and functionality

--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="title">Rock, Paper, Scissors</h1>
-    <button class="rock-btn">Rock</button>
-    <button class="paper-btn">Paper</button>
-    <button class="scissors-btn">Scissors</button>
-    
+    <div class="container">
+        <h1 class="title">Rock, Paper, Scissors</h1>
+        <div class="score">Score: Player 0 | Computer 0</div>
+        <div class="round-result">Make your choice!</div>
+        <div class="choices">
+            <button class="choice-button">Rock</button>
+            <button class="choice-button">Paper</button>
+            <button class="choice-button">Scissors</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
